==> flyghost/OneOS-V2.1.0/drivers/hal/gd/drivers/f4xx/drv_usart.c <==
#include <stdio.h>
#include <board.h>
#include <os_memory.h>
#include <bus/bus.h>
#include "drv_usart.h"
#include "drv_gpio.h"

static void usart_irq_handler(void)
{
    struct gd32_usart *usart;

    os_list_for_each_entry(usart, &gd32_usart_list, struct gd32_usart, list)
    {
        gd32_usart_irq_callback(usart);
        return;
    }   
}

static void usart_dma_irqhandler(void)
{
    struct gd32_usart *usart;
    
    os_list_for_each_entry(usart, &gd32_usart_list, struct gd32_usart, list)
    {
        soft_dma_half_irq(&usart->sdma);
        return;    
    }
}

void __os_hw_console_output(char *str)
{
    int i;
    
    if (console_usart == OS_NULL)
        return;

    for (i = 0; i < strlen(str); i++)
    {
        while (usart_flag_get(console_usart->husart, USART_FLAG_TC) == RESET);
            usart_data_transmit(console_usart->husart, str[i]);
    }
}
