==> flyghost/OneOS-V2.1.0/drivers/hal/hk32/drivers/f103/drv_usart.c <==
#include <os_memory.h>
#include <bus/bus.h>
#include <dma/dma.h>
#include <os_stddef.h>
#include <string.h>
#include <stdint.h>
#define DRV_EXT_LVL DBG_EXT_INFO
#define DRV_EXT_TAG "drv.usart"
#include <drv_log.h>
#include <drv_common.h>
#include <drv_usart.h>

static void usart_irqhandler(USART_TypeDef *huart)
{
    hk32_usart_t *uart;
    
    os_list_for_each_entry(uart, &hk32_usart_list, hk32_usart_t, list)
    {
        if (uart->info->huart == huart)
        {
            hk32_usart_irq_callback(uart);
            return;
        }
    }
}

static void usart_dma_irqhandler(USART_TypeDef *huart)
{
    hk32_usart_t *uart;
    
    os_list_for_each_entry(uart, &hk32_usart_list, hk32_usart_t, list)
    {
        if (uart->info->huart == huart)
        {
            soft_dma_half_irq(&uart->sdma);
            return;
        }
    }
}

void __os_hw_console_output(char *str)
{
    int i;
    
    if (console_uart == OS_NULL)
        return;

    for (i = 0; i < strlen(str); i++)
    {
        while (USART_GetFlagStatus(console_uart->huart, USART_FLAG_TC) == RESET);
            USART_SendData(console_uart->huart, str[i]);
    }

}
